--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -2,6 +2,7 @@
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/score"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".Game">
@@ -15,48 +16,135 @@
     </include>
 
     <ImageView
-        android:id="@+id/ThePudding"
-        android:layout_width="60dp"
-        android:layout_height="60dp"
-        android:layout_below="@+id/main_toolbar"
-        android:layout_marginTop="296dp"
-        android:layout_marginBottom="375dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/pudding" />
-
-    <ImageView
         android:id="@+id/Marutaro"
         android:layout_width="300dp"
         android:layout_height="400dp"
         android:layout_below="@+id/main_toolbar"
-        android:layout_marginStart="5dp"
+        android:layout_marginStart="4dp"
+        android:layout_marginLeft="4dp"
+        android:layout_marginTop="8dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/main_toolbar"
+        app:srcCompat="@drawable/marutaro" />
+
+    <ImageView
+        android:id="@+id/ThePudding"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
+        android:layout_below="@+id/main_toolbar"
+        android:layout_marginStart="8dp"
         android:layout_marginLeft="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toBottomOf="@+id/Marutaro"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.112"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.048"
-        app:srcCompat="@drawable/marutaro" />
+        app:layout_constraintTop_toTopOf="@+id/Marutaro"
+        app:layout_constraintVertical_bias="0.805"
+        app:srcCompat="@drawable/pudding" />
 
     <TextView
         android:id="@+id/ScoreText"
-        android:layout_width="133dp"
-        android:layout_height="100dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_below="@+id/main_toolbar"
-        android:text="Best Score: 20\nYour Pudding: 2"
-        android:textSize="18sp"
+        android:layout_marginStart="8dp"
+        android:layout_marginLeft="8dp"
+        android:text="0"
+        android:textSize="24sp"
+        app:layout_constraintStart_toEndOf="@+id/textView2"
+        app:layout_constraintTop_toTopOf="@+id/textView2" />
+
+    <Button
+        android:id="@+id/play_btn"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp"
+        android:background="#00FFFFFF"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.942"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.364"
-        tools:text="Best Score: 20\nYour Pudding: 2" />
+        app:layout_constraintTop_toBottomOf="@+id/ThePudding" />
+
+    <TextView
+        android:id="@+id/textView2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginTop="192dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp"
+        android:text="Score"
+        android:textSize="24sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.764"
+        app:layout_constraintStart_toStartOf="@+id/Marutaro"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/textView10"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="4dp"
+        android:text="Pudding"
+        android:textSize="24sp"
+        app:layout_constraintEnd_toEndOf="@+id/textView2"
+        app:layout_constraintTop_toBottomOf="@+id/textView2" />
+
+    <TextView
+        android:id="@+id/PuddingNumber"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginTop="4dp"
+        android:text="5"
+        android:textSize="24sp"
+        app:layout_constraintStart_toEndOf="@+id/textView10"
+        app:layout_constraintTop_toBottomOf="@+id/ScoreText" />
+
+    <ImageView
+        android:id="@+id/pudding0"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
+        app:layout_constraintStart_toStartOf="@+id/ThePudding"
+        app:layout_constraintTop_toTopOf="@+id/ThePudding"
+        app:srcCompat="@drawable/pudding" />
+
+    <ImageView
+        android:id="@+id/pudding1"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
+        app:layout_constraintStart_toStartOf="@+id/pudding0"
+        app:layout_constraintTop_toTopOf="@+id/pudding0"
+        app:srcCompat="@drawable/pudding" />
+
+    <ImageView
+        android:id="@+id/pudding2"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
+        app:layout_constraintStart_toStartOf="@+id/pudding1"
+        app:layout_constraintTop_toTopOf="@+id/pudding1"
+        app:srcCompat="@drawable/pudding" />
+
+    <ImageView
+        android:id="@+id/pudding3"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
+        app:layout_constraintStart_toStartOf="@+id/pudding2"
+        app:layout_constraintTop_toTopOf="@+id/pudding2"
+        app:srcCompat="@drawable/pudding" />
+
+    <ImageView
+        android:id="@+id/pudding4"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
+        app:layout_constraintStart_toStartOf="@+id/pudding3"
+        app:layout_constraintTop_toTopOf="@+id/pudding3"
+        app:srcCompat="@drawable/pudding" />
+
 </android.support.constraint.ConstraintLayout>
